cmake_minimum_required(VERSION 3.17)
project(hackerrank)

set(CMAKE_CXX_STANDARD 14)

add_executable(hackerrank "hashTables/Ransom note/RansomNote.cpp")
add_executable(IceCreamParlor "hashTables/Ice Cream Parlor/IceCreamParlor.cpp")
add_executable(twoStrings "hashTables/Two strings/twoStrings.cpp")
add_executable(sherlockAndAnagrams "hashTables/Sherlock and Anagrams/sherlockAndAnagrams.cpp")
add_executable(countTriplets "hashTables/Count Triplets/countTriplets.cpp")